--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -278,7 +278,7 @@
             Some of my work
           </h2>
           <p class="mt-4 text-base font-normal text-gray-500 sm:text-xl dark:text-gray-400">
-            Here are some of the projects I have completed in my own time during my self-taught jo
+            Here are some of the projects I have completed in my own time during my self-taught journey.
           </p>
         </div>
 
@@ -286,7 +286,7 @@
           <div class="space-y-4">
             <span
               class="bg-gray-100 text-gray-900 text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">
-              Alphabet Inc.
+              Personal
             </span>
             <h3 class="text-2xl font-bold leading-tight text-gray-900 dark:text-white">
               Official website
@@ -294,64 +294,56 @@
             <p class="text-lg font-normal text-gray-500 dark:text-gray-400">
               Flowbite helps you connect with friends, family and communities of people who share your interests.
             </p>
-            <a href="#" title=""
-              class="text-white bg-primary-700 justify-center hover:bg-primary-800 inline-flex items-center  focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
-              role="button">
-              View case study
-              <svg aria-hidden="true" class="w-5 h-5 ml-2 -mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-                fill="currentColor">
-                <path fill-rule="evenodd"
-                  d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                  clip-rule="evenodd" />
-              </svg>
+            <div class="flex w-full flex-items-center justify-center">
+              <img class="h-10 w-10 inline-block mr-2 p-1 rounded-full" src="assets/svgs/express-svgrepo-com.svg" alt="ExpressJS" style="background-color: white;"> 
+              <img class="h-10 w-10 inline-block mr-2 rounded-full" src="assets/svgs/node-js-svgrepo-com.svg" alt="NodeJS">
+              <img class="h-10 w-10 inline-block mr-2 rounded-full" src="assets/svgs/icons8-mongodb.svg" alt="MongoDB">
+              <img class="h-10 w-10 inline-block mr-2 rounded-full" src="assets/svgs/react-javascript-js-framework-facebook-svgrepo-com.svg" alt="React">
+            </div>            
+            <button type="button" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" onclick="goToPage()">
+              Read more
+            </button>
             </a>
           </div>
 
           <div class="space-y-4">
-            <span
-              class="bg-gray-100 text-gray-900 text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">
-              Microsoft Corp.
+            <span class="bg-gray-100 text-gray-900 text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">
+              Amazon Inc.
             </span>
             <h3 class="text-2xl font-bold leading-tight text-gray-900 dark:text-white">
-              Management system
+              Streamline
             </h3>
             <p class="text-lg font-normal text-gray-500 dark:text-gray-400">
-              Flowbite helps you connect with friends, family and communities of people who share your interests.
+              Streamline is an Amazon-internal web application serving Data Centre staff
             </p>
-            <a href="#" title=""
-              class="text-white bg-primary-700 justify-center hover:bg-primary-800 inline-flex items-center  focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
-              role="button">
-              View case study
-              <svg aria-hidden="true" class="w-5 h-5 ml-2 -mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-                fill="currentColor">
-                <path fill-rule="evenodd"
-                  d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                  clip-rule="evenodd" />
-              </svg>
-            </a>
+            <div class="flex w-full flex-items-center justify-center">
+              <img class="h-10 w-10 inline-block mr-2" src="assets/svgs/icons8-python.svg" alt="Python">
+              <img class="h-10 w-10 inline-block mr-2 rounded-full" src="assets/svgs/aws-icon-services.svg" alt="AWS Services">
+            </div>
+            <button type="button" href="" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" onclick="goToPage()">
+              Read more
+            </button>
           </div>
+          
+          
 
           <div class="space-y-4">
             <span
               class="bg-gray-100 text-gray-900 text-xs font-medium inline-flex items-center px-2.5 py-0.5 rounded dark:bg-gray-700 dark:text-gray-300">
-              Adobe Inc.
+              Personal
             </span>
             <h3 class="text-2xl font-bold leading-tight text-gray-900 dark:text-white">
-              Logo design
+              PassSave
             </h3>
             <p class="text-lg font-normal text-gray-500 dark:text-gray-400">
               Flowbite helps you connect with friends, family and communities of people who share your interests.
             </p>
-            <a href="#" title=""
-              class="text-white bg-primary-700 justify-center hover:bg-primary-800 inline-flex items-center  focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800"
-              role="button">
-              View case study
-              <svg aria-hidden="true" class="w-5 h-5 ml-2 -mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-                fill="currentColor">
-                <path fill-rule="evenodd"
-                  d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
-                  clip-rule="evenodd" />
-              </svg>
+            <div class="flex w-full flex-items-center justify-center">
+              <img class="h-10 w-10 inline-block mr-2" src="assets/svgs/icons8-python.svg" alt="Python"> <!-- Move the img tag here -->
+            </div>
+            <button type="button" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 " onclick="goToPage()">
+              Read more
+            </button>
             </a>
           </div>
         </div>
@@ -402,8 +394,9 @@
     </div>
     <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
     <div class="sm:flex sm:items-center sm:justify-between">
-        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2023 <a href="https://flowbite.com/" class="hover:underline">Flowbite™</a>. All Rights Reserved.
+        <span id="copyright_year" class="text-sm text-gray-500 sm:text-center dark:text-gray-400"><a href="https://flowbite.com/" class="hover:underline"></a>. 
         </span>
+        <div class="text-sm text-gray-500 sm:text-center dark:text-gray-400"></div>
         <div class="flex mt-4 space-x-6 sm:justify-center sm:mt-0">
             <a href="#" class="text-gray-500 hover:text-gray-900 dark:hover:text-white">
                 <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd" /></svg>
@@ -453,6 +446,9 @@
         fg: '#eceeef',
         text: 'Thumbnail'
       });
+      function goToPage() {
+      window.location.href = "/work"; // Replace with the URL of the page you want to navigate to
+      }
     </script>
 
 
