--- a/src/expressjs/pages/home/index.html
+++ b/src/expressjs/pages/home/index.html
@@ -11,8 +11,8 @@
 
     <!-- Bootstrap core CSS -->
     <!-- Icons for socials -->
-    <script src="https://kit.fontawesome.com/85539b08a7.js" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://kit.fontawesome.com/85539b08a7.js" crossorigin="anonymous"></script>
 
     <!-- Custom styles for this template -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,8 +23,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
 
+  <!-- Nav bar -->
   <body class="flex flex-col items-center bg-slate-100 dark:bg-black dark:text-white">
-    <div id="main" class="container mx-auto bg-white dark:bg-zinc-900 m-2 px-6 rounded-lg">
+    <div id="main" class="max-w-5xl container mx-auto bg-white dark:bg-zinc-900 m-2 px-6 rounded-lg">
       <header class="blog-header py-3">
         <div class="flex items-center justify-between">
           <div class="w-1/4">
@@ -68,7 +69,7 @@
       </nav>
     </div>
 
-    <div class="container mx-auto h-full bg-white dark:bg-zinc-900 m-2 px-8 rounded-lg">
+    <div class="container max-w-5xl  mx-auto h-full bg-white dark:bg-zinc-900 m-2 px-8 rounded-lg">
       <div id="about-me" class="mt-7 ml-4 p-3">
         <div class="flex flex-wrap md:flex-no-wrap">
           <div class="flex-1">
@@ -109,7 +110,16 @@
                 </div>
                 <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Jan 2023 - present</time>
                 <h3 class="text-lg font-semibold text-gray-900 dark:text-white">DCO Shift Team Lead</h3>
-                <p class="mb-4 text-xs font-normal text-gray-500 dark:text-gray-400">Get access to over 20+ pages including a dashboard layout, charts, kanban board, calendar, and pre-order E-commerce & Marketing pages.</p>
+                <p class="mb-4 text-xs font-normal text-gray-500 dark:text-gray-400">
+                  <ul class="list-disc ml-8 mt-2 text-gray-500 dark:text-gray-400">
+                    <li class="text-sm">
+                      In January 2023, I was chosen to take over the role as a Team Lead to lead a team of around 12 technicians on my shift. A lot of my day is spent dealing with technical escalations as well as general mentorship for technicians on my shift. 
+                    </li>
+                    <li class="text-sm mt-2">I host daily standup calls to go over any blockers the team has, including setting the priorities for the team.</li>
+                    <li class="text-sm mt-2">I honed in further on my development skills; learning about Javascript frameworks such as React, ExpressJS as well as backends like NodeJS which led to the creation of this resume website I built entirely in my spare time.</li>
+                    <li class="text-sm mt-2">I developed <a class="text-blue-300 underline" href="/work">Streamline</a>; a Python web application built entirely in Python, based on the web-framework Streamlit, hosted entirely on AWS. It's purpose was very broad, however I built it with a goal in mind of creating a better UI for our already made scripts - the scripts we had were useful, but interacting with the scripts via CLI did not provide a good user experience as well as version control for locally downloaded scripts being non-existent. So I centralized everything into one application. </li>
+                  </ul>
+                </p>
             </li>
             <li class="mb-10 ml-4">
               <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
@@ -118,8 +128,19 @@
                   <i class="fas fa-arrow-up text-blue-500"></i>
                 </span>
               </time>
-              <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Datacentre Operations Tech II</h3>
-              <p class="mb-4 text-xs font-normal text-gray-500 dark:text-gray-400">Get access to over 20+ pages including a dashboard layout, charts, kanban board, calendar, and pre-order E-commerce & Marketing pages.</p>
+              <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Datacentre Operations Tech IV</h3>
+              <p class="mb-4 text-xs font-normal text-gray-500 dark:text-gray-400">
+                <ul class="list-disc ml-8 mt-2 text-gray-500 dark:text-gray-400">
+                  <li class="text-sm">
+                    In December 2022 I was promoted to DCO level 4, at this stage I was still heavily involved in the day-to-day operations of our data centres however I was a lot more involved in the mentorship of newer technicians. 
+                  </li>
+                  <li class="text-sm mt-2">I wrote technical documentation to help newer technicians with break/fix issues, a particular document I wrote was implemented globally and is in use today by Amazon data centre technicians around the world.</li>
+                  <li class="text-sm mt-2">I completely re-designed the on-boarding experience for newer technicians, including a more updated specification of what technicians are expected to know.</li>
+                  <li class="text-sm mt-2">I lead larger scale projects including the build out of network infrastructure for our newer data centres. I worked heavily with different stakeholders throughout the projects and gained a lot of good relationships along the way.</li>
+                  <li class="text-sm mt-2">During my time as DCO level 4 I achieved my CCNA as well as other AWS cloud computing certifications. I was also building upon my development skills in the mean time - introducing myself to Python and databases such as MongoDB and SQL.</li>
+                  <li class="text-sm mt-2">I maintained and developed scripts to improve the operational efficiency of staff. One example being a powershell script to automate the creation of tickets that would pull data from an Amazon backend. This enabled a 125% boost in time efficiency.</li>
+                </ul>
+              </p>
             </li>
             <li class="mb-10 ml-4">
               <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
@@ -128,9 +149,19 @@
                   <i class="fas fa-arrow-up text-blue-500"></i>
                 </span>
               </time>
-              <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Datacentre Operations Tech I</h3>
-              <p class="mb-4 text-xs font-normal text-gray-500 dark:text-gray-400">Get access to over 20+ pages including a dashboard layout, charts, kanban board, calendar, and pre-order E-commerce & Marketing pages.</p>
-            </li>
+              <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Datacentre Operations Tech III</h3>
+              <p class="mb-4 text-xs font-normal text-gray-500 dark:text-gray-400">
+                <ul class="list-disc ml-8 mt-2 text-gray-500 dark:text-gray-400">
+                  <li class="text-sm">
+                    Throughout the first 6 months of my tenure I was working remotely studying for the completion for four exams: CompTIA A+ (both 1001 and 1002), CompTIA Network+ and CompTIA Linux+. After passing these exams I was on-boarded to complete further on-the-job training 
+                  </li>
+                  <li class="text-sm mt-2">Parsing logs to diagnose hardware failure - system event logs, dmesg.</li>
+                  <li class="text-sm mt-2">Leading smaller-scale projects to improve the welfare of local data-centre staff.</li>
+                  <li class="text-sm mt-2">Some of the technologies I was using: IPMI, Network Link Troubleshooting, Network Troubleshooting, Hardware, BMC, PXE</li>
+                  <li class="text-sm mt-2">Handle emergency situations: Respond to and manage emergency situations, such as power outages or equipment failures, and ensure that systems are brought back online as quickly as possible.</li>
+                  <li class="text-sm mt-2">Throughout my time as DCO level three, I returned a significant amount of un-sellable capacity to production to be used by our customers, I was one of the leading technicians in this regard.</li>
+                </ul>
+              </p>            </li>
             <li class="mb-10 ml-4">
                 <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-5 -left-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
                 <div class="flex flex-wrap">
@@ -139,10 +170,11 @@
                 </div>
                 <time class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">Aug 2019 - Nov 2020 · 1 yr 4 mos</time>
                 <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Shift Service Desk Agent</h3>
-                <p class="text-xs font-normal text-gray-500 dark:text-gray-400">All of the pages and components are first designed in Figma and we keep a parity between the two versions even as we update the project.</p>
-            </li>
-            <li class="ml-4">
-                <a href="assets/cv.pdf" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-200 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700">Download CV<svg class="w-3 h-3 ml-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg></a>
+                <p class="mb-4 text-xs font-normal text-gray-500 dark:text-gray-400">
+                  <ul class="list-disc ml-8 mt-2 text-gray-500 dark:text-gray-400">
+                    <li class="text-sm">
+                      Working on a shift basis providing 24/7 support for a user base of some 3000 users. Helping the team in deploying and diagnosing network and desktop infrastructure. Attending daily meetings to enhance product and service knowledge and gain insight into beneficial issue-resolution strategies.</li></ul>
+                <a href="assets/cv.pdf" class="inline-flex items-center px-4 mt-6 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-200 focus:text-blue-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700 dark:focus:ring-gray-700">Download CV<svg class="w-3 h-3 ml-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg></a>
             </li>
           </ol>
       </div>
@@ -292,13 +324,14 @@
               Official website
             </h3>
             <p class="text-lg font-normal text-gray-500 dark:text-gray-400">
-              Flowbite helps you connect with friends, family and communities of people who share your interests.
+              This website is my personal resume website, it was built using React, styled with Tailwind CSS with NodeJS as its runtime environment. 
             </p>
             <div class="flex w-full flex-items-center justify-center">
               <img class="h-10 w-10 inline-block mr-2 p-1 rounded-full" src="assets/svgs/express-svgrepo-com.svg" alt="ExpressJS" style="background-color: white;"> 
               <img class="h-10 w-10 inline-block mr-2 rounded-full" src="assets/svgs/node-js-svgrepo-com.svg" alt="NodeJS">
               <img class="h-10 w-10 inline-block mr-2 rounded-full" src="assets/svgs/icons8-mongodb.svg" alt="MongoDB">
               <img class="h-10 w-10 inline-block mr-2 rounded-full" src="assets/svgs/react-javascript-js-framework-facebook-svgrepo-com.svg" alt="React">
+              <img class="h-10 w-10 inline-block mr-2 rounded-full" src="assets/svgs/tailwind-css-icon.svg" alt="Tailwind">
             </div>            
             <button type="button" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2" onclick="goToPage()">
               Read more
@@ -314,7 +347,7 @@
               Streamline
             </h3>
             <p class="text-lg font-normal text-gray-500 dark:text-gray-400">
-              Streamline is an Amazon-internal web application serving Data Centre staff
+              Streamline is an Amazon-internal web application built entirely using Python, based on the Streamlit framework.
             </p>
             <div class="flex w-full flex-items-center justify-center">
               <img class="h-10 w-10 inline-block mr-2" src="assets/svgs/icons8-python.svg" alt="Python">
@@ -336,9 +369,9 @@
               PassSave
             </h3>
             <p class="text-lg font-normal text-gray-500 dark:text-gray-400">
-              Flowbite helps you connect with friends, family and communities of people who share your interests.
+              PassSave is a password-manager GUI application built using Python's tkinter module. 
             </p>
-            <div class="flex w-full flex-items-center justify-center">
+            <div class="flex w-full flex-items-center justify-center min-h-3">
               <img class="h-10 w-10 inline-block mr-2" src="assets/svgs/icons8-python.svg" alt="Python"> <!-- Move the img tag here -->
             </div>
             <button type="button" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 " onclick="goToPage()">
@@ -438,7 +471,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="index.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
     <script>
       Holder.addTheme('thumb', {
