--- a/src/expressjs/pages/work/work.html
+++ b/src/expressjs/pages/work/work.html
@@ -10,56 +10,63 @@
     <title>Jake Lee | Resume</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- Icons for socials -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/85539b08a7.js" crossorigin="anonymous"></script>
 
     <!-- Custom styles for this template -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
-    <link href="index.css" rel="stylesheet">
+    <link href="output.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
 
-  <body class="flex flex-col items-center bg-slate-100 dark:bg-black dark:text-zinc-200">
-    <div class="container mx-auto m-2 px-6 rounded-lg bg-white  dark:bg-slate-900">
+  <body class="flex flex-col items-center bg-slate-100 dark:bg-black dark:text-white">
+    <div id="main" class="max-w-screen-xl container mx-auto bg-white dark:bg-zinc-900 m-2 px-6 rounded-lg">
       <header class="blog-header py-3">
-        <div class="flex items-center justify-between"> 
+        <div class="flex items-center justify-between">
           <div class="w-1/4">
             <div class="social-icons">
-              <a href="https://github.com/jakeoliverlee"><i class="fab fa-github"></i></a>
-              <a href="https://gitlab.com/jakeoliverlee"><i class="fab fa-gitlab"></i></a>
-              <a href="https://www.linkedin.com/in/jake-lee-4aa088129/"><i class="fab fa-linkedin"></i></a>
+              <a href="https://github.com/jakeoliverlee">
+              <img src="assets/images/icons8-github-94.png" alt="github" class="h-7 w-7">
+              </a>
+              <a href="https://www.linkedin.com/in/jake-lee-4aa088129/">
+              <img src="assets/svgs/linkedin.svg" alt="linkedin" class="h-7 w-7">
+              </a>
+              <a href="https://gitlab.com/jakeoliverlee">
+                <img src="assets/svgs/gitlab.svg" alt="gitlab" class="h-7 w-7">
+              </a>
             </div>
           </div>
           <div class="w-1/4 text-center">
             <a class="blog-header-logo text-dark" href="/">Jake Lee</a>
           </div>
           <div class="w-1/4 flex justify-end items-center">
-            <img src="assets/images/dark theme icon/moon.png" id="toggleDarkModeButton" class="hover:shadow-2xl hover:shadow-blue-500/50">
-            <a class="font-sans inline-block px-3 py-1 text-sm font-semibold text-gray-700 border border-gray-400 rounded hover:bg-blue-200 hover:opacity-40 ml-6 transition duration-750 shadow-md" href="mailto:jakeoliverlee@gmail.com">Contact me</a>
+            <button id="theme-toggle" type="button" class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-1 mr-4">
+              <svg id="theme-toggle-dark-icon" class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path></svg>
+              <svg id="theme-toggle-light-icon" class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" fill-rule="evenodd" clip-rule="evenodd"></path></svg>
+          </button>
+          <a type="button" class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-4 py-2 mr-2  dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700 shadow-md" href="mailto:jakeoliverlee@gmail.com">Contact Me</a>
           </div>
         </div>
       </header>
     </div>
 
-    <div class="py-1 nav-scroller mb-2 mt-1 ml-5 justify-start text-left rounded-full bg-white/90 shadow- text-sm font-medium dark:bg-zinc-800/90 dark:border-2 dark:border-zinc-900/50 backdrop-blur">
-        <nav class="px-3 nav d-flex justify-between dark:text-zinc-200">
-          <div class="flex-1">
-            <a class="font-sans block px-3 py-2" href="#">Projects</a>
-          </div>
-          <div class="flex-1">
-            <a class="font-sans block px-3 py-2 transition font-bold relative text-blue-400" href="#">
-              Work
-            </a>
-          </div>
-          <div class="flex-1">
-            <a id="recognition-link" class="font-sans block px-3 py-2" href="#">Gadgets</a>
-          </div>
-        </nav>
-      </div>
+    <div class="py-1 nav-scroller mb-2 mt-1 ml-5 justify-start text-left rounded-full bg-white/90 dark:bg-zinc-900 ring-1 dark:ring-zinc-300/20  text-sm font-medium shadow-md">
+      <nav class="px-3 nav d-flex justify-between">
+        <div class="flex-1">
+          <a id="work-experience-link" class="font-sans block px-3 py-2 text-muted" href="#">Projects</a>
+        </div>
+        <div class="flex-1">
+          <a id="projects-link" class="font-sans block px-3 py-2 text-muted" href="/work">Work</a>
+        </div>
+        <div class="flex-1">
+          <a id="recognition-link" class="font-sans block px-3 py-2 text-muted" href="#">Gadgets</a>
+        </div>
+      </nav>
+    </div>
       
       
 
@@ -79,7 +86,6 @@
     <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="index.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="email.js"></script>
     <script>
       Holder.addTheme('thumb', {
         bg: '#55595c',
